--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,7 @@
             <div class="contact-form">
                 <div id="formMessage" class="form-message"></div>
                 
-                <form id="contactForm" action="https://formspree.io/f/mdaaeodb"
-  method="POST" onsubmit="return handleFormSubmit(event)">
+                <form id="contactForm" action="https://formspree.io/f/mdaaeodb" method="POST">
                     <div class="form-group">
                         <label for="name">Full Name *</label>
                         <input type="text" id="name" name="name" required>
