--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
 
     <section style="background: var(--gray);">
         <div class="container">
-            <h2 class="section-title">Education & Credentials</h2>
+            <h2 class="section-title">Credentials</h2>
             <div style="max-width: 700px; margin: 0 auto;">
                 <div class="service-detail">
                     <h3>Professional Experience</h3>
