--- a/engagement.html
+++ b/engagement.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engagement Model | Proficient Professionals Inc.</title>
     <meta name="description" content="Flexible engagement models from sounding board to fully engaged fractional CTO—choose what works for your needs.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
