--- a/founders.html
+++ b/founders.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Founders & Startup Teams | Proficient Professionals Inc.</title>
     <meta name="description" content="Partner with founders and early-stage teams to turn vision into scalable product execution. From pre-seed to post-Series A.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
