--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strategic Technology Leadership on Demand | Proficient Professionals Inc.</title>
     <meta name="description" content="Helping startups and growth-stage companies build faster, smarter, and more securely. Fractional CTO services for founders and investors.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
