--- a/investors.html
+++ b/investors.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investors & Advisors | Proficient Professionals Inc.</title>
     <meta name="description" content="Technical due diligence, portfolio support, and interim leadership for investors, PE firms, and venture advisors.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
