--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services | Proficient Professionals Inc.</title>
     <meta name="description" content="Strategic technology services including tech strategy, cloud modernization, AI automation, compliance, team development, and M&A support.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
