--- a/why-partner.html
+++ b/why-partner.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why Partner with Us | Proficient Professionals Inc.</title>
     <meta name="description" content="Executive-level leadership with hands-on technical expertise. We embed directly into your teams and focus on outcomes that move your business forward.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
