--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
             
             <div class="value-grid" style="margin-top: 3rem;">
                 <div class="value-card">
-                    <div class="value-icon">🚀</div>
+                   <!-- <div class="value-icon">🚀</div> -->
                     <h3>For Founders & Startups</h3>
                     <p>Launch and scale products faster with technical validation, roadmap prioritization, and scalable architecture that won't box you in later.</p>
                     <a href="founders.html" class="service-link">Learn More →</a>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">💼</div>
+                   <!-- <div class="value-icon">💼</div> -->
                     <h3>For Investors & Advisors</h3>
                     <p>Technical due diligence, risk assessments, and interim leadership to strengthen portfolio companies and drive value creation.</p>
                     <a href="investors.html" class="service-link">Learn More →</a>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">⚡</div>
+                   <!-- <div class="value-icon">⚡</div> -->
                     <h3>Executive & Hands-On</h3>
                     <p>We don't just advise—we get in the trenches. Our team leads from within to accelerate momentum and unblock execution.</p>
                     <a href="why-partner.html" class="service-link">Why Partner →</a>
@@ -85,37 +85,37 @@
             <h2 class="section-title">How We Help</h2>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🎯</div>
+                   <!-- <div class="service-icon">🎯</div> -->
                     <h3>Tech & Product Strategy</h3>
                     <p>Craft and execute technology strategies that align with business goals and product vision—from launch to scale.</p>
                     <a href="services.html#strategy" class="service-link">Learn More →</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">☁️</div>
+                  <!--  <div class="service-icon">☁️</div> -->
                     <h3>Cloud & DevOps Modernization</h3>
                     <p>Cloud architecture improvements, CI/CD pipeline design, and infrastructure-as-code adoption for resilient systems.</p>
                     <a href="services.html#cloud" class="service-link">Learn More →</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🤖</div>
+                   <!-- <div class="service-icon">🤖</div> -->
                     <h3>AI & Intelligent Automation</h3>
                     <p>Identify and implement AI opportunities—from NLP and predictive analytics to LLM integration with measurable ROI.</p>
                     <a href="services.html#ai" class="service-link">Learn More →</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🔒</div>
+                   <!-- <div class="service-icon">🔒</div> -->
                     <h3>Compliance & Risk Governance</h3>
                     <p>HIPAA, SOC 2, and security architecture reviews—build trust through compliance without slowing delivery.</p>
                     <a href="services.html#compliance" class="service-link">Learn More →</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">👥</div>
+                   <!-- <div class="service-icon">👥</div> -->
                     <h3>Engineering Team Development</h3>
                     <p>Build and mentor high-performing teams—from structure and hiring to tech leadership and dev culture.</p>
                     <a href="services.html#team" class="service-link">Learn More →</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📊</div>
+                   <!-- <div class="service-icon">📊</div> -->
                     <h3>Technology Investments & M&A</h3>
                     <p>Technical due diligence, post-acquisition integration, and growth-stage platform alignment.</p>
                     <a href="services.html#investments" class="service-link">Learn More →</a>
@@ -133,22 +133,22 @@
             <h2 class="section-title">Why Partner with Proficient Professionals?</h2>
             <div class="value-grid">
                 <div class="value-card">
-                    <div class="value-icon">✓</div>
+                   <!-- <div class="value-icon">✓</div> -->
                     <h3>Executive, Hands-On, and Focused</h3>
                     <p>We don't just advise—we get in the trenches. Our team leads from within to accelerate momentum and unblock execution.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🏗️</div>
+                   <!-- <div class="value-icon">🏗️</div> -->
                     <h3>Scalable Architecture Expertise</h3>
                     <p>We design and evolve platforms that can scale with your product and customer demands—without reinventing the wheel.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">📈</div>
+                   <!-- <div class="value-icon">📈</div> -->
                     <h3>Business-Outcome Driven</h3>
                     <p>Everything we do is tied to your goals—speed to market, cost efficiency, customer experience, or investor confidence.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">⚡</div>
+                   <!-- <div class="value-icon">⚡</div> -->
                     <h3>Proven History of Rapid Impact</h3>
                     <p>From platform overhauls and AI rollouts to M&A tech integrations—meaningful outcomes fast across healthtech, SaaS, and digital platforms.</p>
                 </div>
