--- a/founders.html
+++ b/founders.html
@@ -54,31 +54,31 @@
             </div>
 
             <div class="service-detail">
-                <div class="service-icon">🚀</div>
+              <!--  <div class="service-icon">🚀</div> -->
                 <h2>Launch & Scale Products Faster</h2>
                 <p>We help you bring your product to market faster—with technical validation, roadmap prioritization, and scalable architecture choices that won't box you in later. We work side-by-side with your product and engineering leads to reduce friction, align execution, and maintain momentum from MVP to product-market fit.</p>
             </div>
 
             <div class="service-detail">
-                <div class="service-icon">👥</div>
+              <!--  <div class="service-icon">👥</div> -->
                 <h2>Structure Engineering Teams & Velocity</h2>
                 <p>We bring clarity to how your engineering team is organized and how work flows. Whether it's hiring your first dev team or leveling up an existing one, we introduce lightweight processes (Agile, CI/CD, DevOps) and decision frameworks that help your team ship faster without burning out.</p>
             </div>
 
             <div class="service-detail">
-                <div class="service-icon">🏗️</div>
+              <!--  <div class="service-icon">🏗️</div> -->
                 <h2>Solve Architecture & Platform Debt</h2>
                 <p>Founders often inherit technical debt early—either from MVP shortcuts or early hires without scaling experience. We help assess what's worth fixing, what's not, and how to evolve your platform incrementally to support scale, reliability, and performance.</p>
             </div>
 
             <div class="service-detail">
-                <div class="service-icon">🔒</div>
+              <!--  <div class="service-icon">🔒</div> -->
                 <h2>Navigate Compliance & Security (HIPAA, SOC 2, etc.)</h2>
                 <p>For healthtech and data-driven startups, compliance isn't optional. We help you navigate security frameworks (HIPAA, SOC 2, HiTrust) early—so you can build trust with customers, avoid costly rework, and accelerate enterprise sales readiness.</p>
             </div>
 
             <div class="service-detail">
-                <div class="service-icon">🤖</div>
+               <!-- <div class="service-icon">🤖</div> -->
                 <h2>Add AI & Automation with Clear ROI</h2>
                 <p>We don't chase buzzwords. We help you identify where AI and automation can genuinely save time, reduce cost, or improve decision-making. From document processing to LLM integration and predictive analytics, we can prototype and implement solutions that tie directly to business outcomes.</p>
             </div>
