--- a/services.html
+++ b/services.html
@@ -63,6 +63,11 @@
                     <li>Technology stack evaluation and recommendations</li>
                     <li>Strategic planning for funding rounds and investor presentations</li>
                 </ul>
+                <div class="service-highlight">
+                    <strong>Real Impact:</strong> Defined and executed a multi-year technology, product, and architecture strategy for the Outcomes (Cardinal Health) ecosystem, aligning 25+ products across multiple platforms with a unified roadmap for modernization, scalability, security, and operational excellence.
+                </div>
+
+                
             </div>
 
             <!-- Service 2 -->
