--- a/why-partner.html
+++ b/why-partner.html
@@ -47,7 +47,7 @@
     </section>
 
     <!-- Main Content -->
-    <section>
+      <section>
         <div class="container">
             <div style="max-width: 900px; margin: 0 auto 4rem;">
                 <p style="font-size: 1.2rem; line-height: 1.8; color: var(--text); text-align: center;">
@@ -57,31 +57,48 @@
 
             <div class="value-grid">
                 <div class="value-card">
-                 <!--   <div class="value-icon">🎯</div>  -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Executive, Hands-On, and Focused">
+                        <img src="icons/handson-icon.svg" alt="Executive, Hands-On, and Focused" width="72" height="72">
+                      </svg>
+                     </div>
                     <h3>Executive, Hands-On, and Focused</h3>
                     <p>We don't just advise—we get in the trenches. Our team leads from within to accelerate momentum and unblock execution. Whether it's reviewing code, architecting solutions, or mentoring engineers, we roll up our sleeves and deliver tangible results.</p>
                 </div>
 
                 <div class="value-card">
-                  <!--  <div class="value-icon">🏗️</div> -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Scalable Architecture Expertise">
+                        <img src="icons/scalable-icon.svg" alt="Scalable Architecture Expertise" width="72" height="72">
+                      </svg>
+                     </div>
                     <h3>Scalable Architecture Expertise</h3>
                     <p>We design and evolve platforms that can scale with your product and customer demands—without reinventing the wheel or chasing trends. Our architectures are battle-tested across healthtech, SaaS, and digital platforms serving millions of users.</p>
                 </div>
 
                 <div class="value-card">
-                  <!--  <div class="value-icon">📈</div> -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Business-Outcome Driven">
+                        <img src="icons/outcomes-icon.svg" alt="Business-Outcome Driven" width="72" height="72">
+                      </svg>
+                     </div>
                     <h3>Business-Outcome Driven</h3>
                     <p>Everything we do is tied to your goals—whether it's speed to market, cost efficiency, customer experience, or investor confidence. We measure success by your success: faster launches, lower costs, higher quality, and stronger competitive positioning.</p>
                 </div>
 
                 <div class="value-card">
-                  <!--  <div class="value-icon">⚡</div> -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Rapid Impact">
+                        <img src="icons/fast-impact-icon.svg" alt="Rapid Impact" width="72" height="72">
+                      </svg>
+                     </div>
                     <h3>Proven History of Rapid Impact</h3>
                     <p>From platform overhauls and AI rollouts to M&A tech integrations, we've delivered meaningful outcomes fast—across healthtech, SaaS, and digital platforms. Our track record speaks for itself: 25% cost reductions, 10x scalability improvements, 60% efficiency gains.</p>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Track Record -->
     <section style="background: var(--gray);">
