--- a/investors.html
+++ b/investors.html
@@ -57,31 +57,56 @@
             </div>
 
             <div class="service-detail">
-              <!--  <div class="service-icon">🔍</div> -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Evaluate Tech Strategy & Risk">
+                        <img src="icons/eval-tech-strat-icon.svg" alt="Evaluate Tech Strategy & Risk" width="72" height="72">
+                      </svg>
+                     </div>
+
                 <h2>Evaluate Tech Strategy & Risk</h2>
                 <p>Before the term sheet is signed or a new round closes, we assess the target's technology stack, architecture decisions, hiring plans, and product roadmap. We provide a clear-eyed view of the opportunities, risks, and level of technical maturity—so investors can make confident decisions backed by technical clarity.</p>
             </div>
 
             <div class="service-detail">
-              <!--  <div class="service-icon">📋</div>  -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Due Diligence & Technical Audits">
+                        <img src="icons/tech-audit-icon.svg" alt="Due Diligence & Technical Audits" width="72" height="72">
+                      </svg>
+                     </div>
+
                 <h2>Support Due Diligence & Technical Audits</h2>
                 <p>We conduct light- and deep-dive technical audits that align with your investment thesis. From reviewing codebase quality and scalability to analyzing infrastructure cost models and compliance posture, we deliver structured assessments that go beyond gut feel.</p>
             </div>
 
             <div class="service-detail">
-              <!--  <div class="service-icon">🎯</div>  -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Drive Product-Market Fit">
+                        <img src="icons/prod-mkt-fit-icon.svg" alt="Drive Product-Market Fit" width="72" height="72">
+                      </svg>
+                     </div>
+
                 <h2>Drive Product-Market Fit Readiness</h2>
                 <p>We help teams focus their efforts on what matters most: shipping products customers love. That includes product/tech alignment, agile execution, and prioritizing features that shorten the feedback loop—turning strategy into traction.</p>
             </div>
 
             <div class="service-detail">
-              <!--  <div class="service-icon">💰</div> -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Reduce Infrastructure Costs & Delivery Risks">
+                        <img src="icons/infra-dlvry-risk-icon.svg" alt="Reduce Infrastructure Costs & Delivery Risks" width="72" height="72">
+                      </svg>
+                     </div>
+
                 <h2>Reduce Infrastructure Costs & Delivery Risks</h2>
                 <p>Startups often overspend on cloud infrastructure or run into delivery bottlenecks due to poor tooling, team structure, or architecture. We help correct course by optimizing cost, reducing waste, and improving delivery pipelines—so funding goes further and outcomes arrive faster.</p>
             </div>
 
             <div class="service-detail">
-               <!-- <div class="service-icon">⚡</div>  -->
+                     <div class="service-icon">  
+                      <svg class="service-icon" aria-label="Get Engineering on Track Post-Funding">
+                        <img src="icons/engg-track-icon.svg" alt="Get Engineering on Track Post-Funding" width="72" height="72">
+                      </svg>
+                     </div>
+
                 <h2>Get Engineering on Track Post-Funding</h2>
                 <p>The first 6–12 months after funding are critical. We support portfolio companies with interim technical leadership, team ramp-up, hiring strategy, and execution alignment—so founders can scale with confidence and investor goals stay on track.</p>
             </div>
