--- a/about.html
+++ b/about.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Proficient Professionals Inc.</title>
     <meta name="description" content="Meet Prishant Mantrao, hands-on technology executive with 20+ years experience in digital transformation and software engineering.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="canonical" href="https://proficient-professionals.com/">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Add structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Proficient Professionals Inc.",
+      "description": "Strategic Technology Leadership on Demand",
+      "url": "https://proficient-professionals.com",
+      "email": "prishant@proficient-professionals.com"
+    }
+    </script>    
+
 </head>
 <body>
  <nav>
