--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,24 @@
     <meta name="description" content="Get in touch with Proficient Professionals for fractional CTO services. Schedule a free consultation today.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="canonical" href="https://proficient-professionals.com/">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Add structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Proficient Professionals Inc.",
+      "description": "Strategic Technology Leadership on Demand",
+      "url": "https://proficient-professionals.com",
+      "email": "prishant@proficient-professionals.com"
+    }
+    </script>    
+
+    
 </head>
 <body>
     <!-- Navigation -->
