--- a/services.html
+++ b/services.html
@@ -7,6 +7,23 @@
     <meta name="description" content="Strategic technology services including tech strategy, cloud modernization, AI automation, compliance, team development, and M&A support.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://proficient-professionals.com/">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Add structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Proficient Professionals Inc.",
+      "description": "Strategic Technology Leadership on Demand",
+      "url": "https://proficient-professionals.com",
+      "email": "prishant@proficient-professionals.com"
+    }
+    </script>    
+
+    
 </head>
 <body>
     <!-- Navigation -->
