--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strategic Technology Leadership on Demand | Proficient Professionals Inc.</title>
-    <meta name="description" content="Helping startups and growth-stage companies build faster, smarter, and more securely. Fractional CTO services for founders and investors.">
+    <meta name="description" content="Fractional CTO services for PE-backed SaaS and Series A-C startups. Expert technology leadership, cloud architecture, AI strategy, and M&A due diligence. 20+ years experience.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="https://proficient-professionals.com/">
