--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services | Proficient Professionals Inc.</title>
-    <meta name="description" content="Strategic technology services including tech strategy, cloud modernization, AI automation, compliance, team development, and M&A support.">
+    <meta name="description" content="Strategic technology services: Fractional CTO, cloud architecture, AI integration, compliance (HIPAA, SOC2), engineering team scaling, and M&A technical due diligence for startups.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="https://proficient-professionals.com/">
