--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Proficient Professionals Inc.</title>
-    <meta name="description" content="Meet Prishant Mantrao, hands-on technology executive with 20+ years experience in digital transformation and software engineering.">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <meta name="description" content="Meet Prishant Mantrao - Fractional CTO with 20+ years leading technology for healthcare, SaaS, and digital platforms. From startups to Fortune 20 enterprises.">    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 
     <link rel="canonical" href="https://proficient-professionals.com/">
