--- a/why-partner.html
+++ b/why-partner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why Partner with Us | Proficient Professionals Inc.</title>
-    <meta name="description" content="Executive-level leadership with hands-on technical expertise. We embed directly into your teams and focus on outcomes that move your business forward.">
+    <meta name="description" content="Executive-level CTO expertise without full-time costs. Hands-on technical leadership, scalable architecture, and rapid impact for growing companies.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="https://proficient-professionals.com/">
