--- a/founders.html
+++ b/founders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Founders & Startup Teams | Proficient Professionals Inc.</title>
-    <meta name="description" content="Partner with founders and early-stage teams to turn vision into scalable product execution. From pre-seed to post-Series A.">
+    <meta name="description" content="Fractional CTO services for founders: technical validation, scalable architecture, team building, compliance guidance, and AI strategy for fast-growing startups.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="https://proficient-professionals.com/">
