--- a/investors.html
+++ b/investors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investors & Advisors | Proficient Professionals Inc.</title>
-    <meta name="description" content="Technical due diligence, portfolio support, and interim leadership for investors, PE firms, and venture advisors.">
+    <meta name="description" content="Technical due diligence and fractional CTO services for investors: M&A assessment, portfolio company support, risk mitigation, and technology roadmap validation.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="https://proficient-professionals.com/">
