--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Proficient Professionals Inc.</title>
-    <meta name="description" content="Get in touch with Proficient Professionals for fractional CTO services. Schedule a free consultation today.">
+    <meta name="description" content="Contact Proficient Professionals for fractional CTO services. Free consultation to discuss your technology challenges and growth goals. Response within 24 hours.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 
