--- a/services.html
+++ b/services.html
@@ -30,8 +30,8 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "Proficient Professionals Inc.",
-      "description": "Strategic technology services: Fractional CTO, cloud architecture, AI integration, compliance (HIPAA, SOC2), engineering team scaling, and M&A technical due diligence for startups.",
-      "url": "https://proficient-professionals.com/services.html",
+      "description": "Strategic Technology Leadership on Demand - Fractional CTO, Cloud Architecture, AI Strategy, and M&A Technical Due Diligence",
+      "url": "https://proficient-professionals.com",
       "logo": "https://proficient-professionals.com/logo.svg",
       "email": "prishant@proficient-professionals.com",
       "founder": {
