--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://proficient-professionals.com/">
-    <meta property="og:title" content="Strategic Technology Leadership on Demand | Proficient Professionals">
+    <meta property="og:title" content="Strategic Technology Leadership on Demand | Proficient Professionals Inc.">
     <meta property="og:description" content="Fractional CTO services for PE-backed SaaS and Series A-C startups. Expert technology leadership, cloud architecture, AI strategy, and M&A due diligence.">
     <meta property="og:image" content="https://proficient-professionals.com/images/og-image.png">
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://proficient-professionals.com/">
-    <meta name="twitter:title" content="Strategic Technology Leadership on Demand | Proficient Professionals">
+    <meta name="twitter:title" content="Strategic Technology Leadership on Demand | Proficient Professionals Inc.">
     <meta name="twitter:description" content="Fractional CTO services for PE-backed SaaS and Series A-C startups. Expert technology leadership, cloud architecture, and M&A due diligence.">
     <meta name="twitter:image" content="https://proficient-professionals.com/images/og-image.png">
     
