--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="services.html">How We Help</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="why-partner.html">Why Partner</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Services</a>
