--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="why-partner.html">Why Partner</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle">Services</a>
+                <a href="#" class="dropdown-toggle">WHo We Help</a>
                 <ul class="dropdown-menu">
                     <li><a href="founders.html">Founders & CEOs</a></li>
                     <li><a href="investors.html">Investors & Boards</a></li>
@@ -133,7 +133,7 @@
 </style>
 
 <!-- Value Proposition -->
-<section style="background: var(--gray);">
+<section>
     <div class="container">
         <h2 class="section-title">Clarity When Technology Decisions Carry Real Consequences</h2>
         <p class="section-subtitle">
