--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             unexpected cost, or missed opportunity.
         </p>
 
-        <div class="value-grid" style="margin-top:3rem;">
+        <div class="value-grid">
             <div class="value-card">
                 <h3>Investors & Deal Sponsors</h3>
                 <p>Independent insight into technology risk, scalability, and execution readiness before and after investment decisions.</p>
